// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterLink > should have correct links for dynamic filters 1`] = `
<DocumentFragment>
  <button
    aria-label="lang:go, At least 500 results match this filter."
    class="btn btnLink sidebarSectionListItem"
    data-testid="filter-link"
    type="button"
    value="lang:go"
  >
    <span
      class="flex-grow-1 sidebarSectionListItemLabel"
    >
      <span
        class="text-monospace search-query-link"
      >
        <span
          class="search-filter-keyword"
        >
          lang
        </span>
        <span
          class="search-filter-separator"
        >
          :
        </span>
        <span
          class="search-query-text"
        >
          go
        </span>
      </span>
    </span>
    <span
      class="pl-2 flex-shrink-0"
    >
      500
    </span>
  </button>
  <button
    aria-label="lang:typescript, At least 241 results match this filter."
    class="btn btnLink sidebarSectionListItem"
    data-testid="filter-link"
    type="button"
    value="lang:typescript"
  >
    <span
      class="flex-grow-1 sidebarSectionListItemLabel"
    >
      <span
        class="text-monospace search-query-link"
      >
        <span
          class="search-filter-keyword"
        >
          lang
        </span>
        <span
          class="search-filter-separator"
        >
          :
        </span>
        <span
          class="search-query-text"
        >
          typescript
        </span>
      </span>
    </span>
    <span
      class="pl-2 flex-shrink-0"
    >
      241
    </span>
  </button>
  <button
    aria-label="-file:_test\\\\.go$, At least 1 result matches this filter."
    class="btn btnLink sidebarSectionListItem"
    data-testid="filter-link"
    type="button"
    value="-file:_test\\\\.go$"
  >
    <span
      class="flex-grow-1 sidebarSectionListItemLabel"
    >
      <span
        class="text-monospace search-query-link"
      >
        <span
          class="search-filter-keyword"
        >
          -file
        </span>
        <span
          class="search-filter-separator"
        >
          :
        </span>
        <span
          class="search-query-text"
        >
          _test
        </span>
        <span
          class="search-regexp-meta-escaped-character"
        >
          \\.
        </span>
        <span
          class="search-query-text"
        >
          go
        </span>
        <span
          class="search-regexp-meta-assertion"
        >
          $
        </span>
      </span>
    </span>
    <span
      class="pl-2 flex-shrink-0"
    >
      1
    </span>
  </button>
</DocumentFragment>
`;

exports[`FilterLink > should have correct links for repos 1`] = `
<DocumentFragment>
  <button
    aria-label="Search in repository gitlab.com/sourcegraph/sourcegraph, At least 5 results match this filter."
    class="btn btnLink sidebarSectionListItem"
    data-testid="filter-link"
    type="button"
    value="repo:^gitlab\\\\.com/sourcegraph/sourcgreaph$"
  >
    <span
      class="flex-grow-1 sidebarSectionListItemLabel"
    >
      <span
        class="sidebarSectionListItemBreakWords"
      >
        <svg
          aria-label="gitlab.com"
          class="mdi-icon iconInline sidebarSectionIcon"
          color="#E24329"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M21.94 13.11L20.89 9.89C20.89 9.86 20.88 9.83 20.87 9.8L18.76 3.32C18.65 3 18.33 2.75 17.96 2.75C17.6 2.75 17.28 3 17.17 3.33L15.17 9.5H8.84L6.83 3.33C6.72 3 6.4 2.75 6.04 2.75H6.04C5.67 2.75 5.35 3 5.24 3.33L3.13 9.82C3.13 9.82 3.13 9.83 3.13 9.83L2.06 13.11C1.9 13.61 2.07 14.15 2.5 14.45L11.72 21.16C11.89 21.28 12.11 21.28 12.28 21.15L21.5 14.45C21.93 14.15 22.1 13.61 21.94 13.11M8.15 10.45L10.72 18.36L4.55 10.45M13.28 18.37L15.75 10.78L15.85 10.45H19.46L13.87 17.61M17.97 3.94L19.78 9.5H16.16M14.86 10.45L13.07 15.96L12 19.24L9.14 10.45M6.03 3.94L7.84 9.5H4.23M3.05 13.69C2.96 13.62 2.92 13.5 2.96 13.4L3.75 10.97L9.57 18.42M20.95 13.69L14.44 18.42L14.46 18.39L20.25 10.97L21.04 13.4C21.08 13.5 21.04 13.62 20.95 13.69"
          />
        </svg>
        sourcegraph/sourcegraph
      </span>
    </span>
    <span
      class="pl-2 flex-shrink-0"
    >
      5
    </span>
  </button>
  <button
    aria-label="Search in repository github.com/microsoft/vscode, At least 201 results match this filter."
    class="btn btnLink sidebarSectionListItem"
    data-testid="filter-link"
    type="button"
    value="repo:^github\\\\.com/microsoft/vscode$"
  >
    <span
      class="flex-grow-1 sidebarSectionListItemLabel"
    >
      <span
        class="sidebarSectionListItemBreakWords"
      >
        <svg
          aria-label="github.com"
          class="mdi-icon iconInline sidebarSectionIcon"
          color="var(--body-color)"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
        microsoft/vscode
      </span>
    </span>
    <span
      class="pl-2 flex-shrink-0"
    >
      201
    </span>
  </button>
</DocumentFragment>
`;

exports[`FilterLink > should have correct links for scopes 1`] = `
<DocumentFragment>
  <button
    aria-label="Use search snippet: This is a search scope with a very long name lorem ipsum dolor sit amet"
    class="btn btnLink sidebarSectionListItem"
    data-testid="filter-link"
    type="button"
    value="repo:sourcegraph"
  >
    <span
      class="flex-grow-1 sidebarSectionListItemLabel"
    >
      This is a search scope with a very long name lorem ipsum dolor sit amet
    </span>
  </button>
  <button
    aria-label="Use search snippet: All results"
    class="btn btnLink sidebarSectionListItem"
    data-testid="filter-link"
    type="button"
    value="count:all"
  >
    <span
      class="flex-grow-1 sidebarSectionListItemLabel"
    >
      All results
    </span>
  </button>
</DocumentFragment>
`;

exports[`FilterLink > should have show icons for repos on cloud 1`] = `
<DocumentFragment>
  <button
    aria-label="Search in repository gitlab.com/sourcegraph/sourcegraph, At least 5 results match this filter."
    class="btn btnLink sidebarSectionListItem"
    data-testid="filter-link"
    type="button"
    value="repo:^gitlab\\\\.com/sourcegraph/sourcgreaph$"
  >
    <span
      class="flex-grow-1 sidebarSectionListItemLabel"
    >
      <span
        class="sidebarSectionListItemBreakWords"
      >
        <svg
          aria-label="gitlab.com"
          class="mdi-icon iconInline sidebarSectionIcon"
          color="#E24329"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M21.94 13.11L20.89 9.89C20.89 9.86 20.88 9.83 20.87 9.8L18.76 3.32C18.65 3 18.33 2.75 17.96 2.75C17.6 2.75 17.28 3 17.17 3.33L15.17 9.5H8.84L6.83 3.33C6.72 3 6.4 2.75 6.04 2.75H6.04C5.67 2.75 5.35 3 5.24 3.33L3.13 9.82C3.13 9.82 3.13 9.83 3.13 9.83L2.06 13.11C1.9 13.61 2.07 14.15 2.5 14.45L11.72 21.16C11.89 21.28 12.11 21.28 12.28 21.15L21.5 14.45C21.93 14.15 22.1 13.61 21.94 13.11M8.15 10.45L10.72 18.36L4.55 10.45M13.28 18.37L15.75 10.78L15.85 10.45H19.46L13.87 17.61M17.97 3.94L19.78 9.5H16.16M14.86 10.45L13.07 15.96L12 19.24L9.14 10.45M6.03 3.94L7.84 9.5H4.23M3.05 13.69C2.96 13.62 2.92 13.5 2.96 13.4L3.75 10.97L9.57 18.42M20.95 13.69L14.44 18.42L14.46 18.39L20.25 10.97L21.04 13.4C21.08 13.5 21.04 13.62 20.95 13.69"
          />
        </svg>
        sourcegraph/sourcegraph
      </span>
    </span>
    <span
      class="pl-2 flex-shrink-0"
    >
      5
    </span>
  </button>
  <button
    aria-label="Search in repository github.com/microsoft/vscode, At least 201 results match this filter."
    class="btn btnLink sidebarSectionListItem"
    data-testid="filter-link"
    type="button"
    value="repo:^github\\\\.com/microsoft/vscode$"
  >
    <span
      class="flex-grow-1 sidebarSectionListItemLabel"
    >
      <span
        class="sidebarSectionListItemBreakWords"
      >
        <svg
          aria-label="github.com"
          class="mdi-icon iconInline sidebarSectionIcon"
          color="var(--body-color)"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
          />
        </svg>
        microsoft/vscode
      </span>
    </span>
    <span
      class="pl-2 flex-shrink-0"
    >
      201
    </span>
  </button>
</DocumentFragment>
`;
